[#3098] feat(event-handling): SequencingEventHandlingComponentTest